Mobile-first design is pudated.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "waypoints": "^4.0.1"
   },
   "devDependencies": {
+    "ajv": "^5.2.3",
     "autoprefixer": "^7.1.4",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -34,6 +35,6 @@
     "postcss-nested": "^2.1.2",
     "postcss-simple-vars": "^4.1.0",
     "svg2png": "^4.1.1",
-    "webpack": "^3.5.5"
+    "webpack": "^3.6.0"
   }
 }
